# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  mazegen-1.0.0-py3-none-any.whl  pyproject.toml
config/: default.txt
display/: animation.py  ascii.py  interactive.py
maze/: __init__.py  generator.py  model.py  solver.py
maze/algorithms/: __init__.py  backtracking.py  prim.py
mazegen/: __init__.py  core.py
output/: maze.txt
tests/: test_generator.py
utils/: parser.py  validator.py  writer.py
